--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Dependency folders
 node_modules
 
+# pnpm-specific files
+pnpm-lock.yaml
+
+# Environment variables
 .env
+
+# OS and editor files
+.DS_Store
+.vscode
